<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="187dp"
        android:layout_height="164dp"
        app:layout_constraintBottom_toTopOf="@+id/textlogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_facebook" />

    <TextView
        android:id="@+id/textlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_to_facebook"
        android:textColor="#0578D5"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/username"
        android:layout_width="262dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/username"
        app:layout_constraintBottom_toTopOf="@+id/Password"
        app:layout_constraintEnd_toEndOf="@+id/textlogin"
        app:layout_constraintStart_toStartOf="@+id/textlogin"
        app:layout_constraintTop_toBottomOf="@+id/textlogin" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="260dp"
        android:layout_height="38dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/password"
        app:layout_constraintBottom_toTopOf="@+id/LoginButtun"
        app:layout_constraintEnd_toEndOf="@+id/username"
        app:layout_constraintStart_toStartOf="@+id/username"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <Button
        android:id="@+id/LoginButtun"
        android:layout_width="175dp"
        android:layout_height="45dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/Password"
        app:layout_constraintStart_toStartOf="@+id/Password"
        app:layout_constraintTop_toBottomOf="@+id/Password" />

</androidx.constraintlayout.widget.ConstraintLayout>